--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,6 @@
 <header>
   <h1>Welcome Chandan</h1>
+  <p><a href="/home">Home</a></p>
+  <p><a href="/about">About</a></p>
+  <p><a href="/projects">Projects</a></p>
 </header>
